# lwa_unity_unpack

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE.md  README.md
.github/workflows/: deploy.yml  rust.yml
src/: args.rs  asset.rs  main.rs  unpacker.rs  yaml_helpers.rs
src/primitives/: materials.rs  mod.rs
