[package]
name = "lwa_unity_unpack"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/Leinnan/lwa_unity_unpack"
homepage = "https://github.com/Leinnan/lwa_unity_unpack"
readme = "README.md"
license = "MIT"
keywords = ["cli", "unity", "gamedev", "game-development"]
categories = ["command-line-utilities", "development-tools"]
description = "Simple CLI tool for unpacking the unitypackages."
exclude = ["/.github"]

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true

[profile.dev.package."*"]
opt-level = 2

[dependencies]
clap = { version = "4.4", features = ["derive"] }
flate2 = "1.0"
hashbrown = { version ="0.14.3", features = ["ahash","allocator-api2","inline-more","rayon"] }
rayon = "1.8.0"
tar = "0.4"
