[package]
name = "lwa_unity_unpack"
version = "0.4.1"
edition = "2021"
repository = "https://github.com/Leinnan/lwa_unity_unpack"
homepage = "https://github.com/Leinnan/lwa_unity_unpack"
readme = "README.md"
license = "MIT"
keywords = ["cli", "unity", "gamedev", "game-development"]
categories = ["command-line-utilities", "development-tools"]
description = "Simple CLI tool for unpacking the unitypackages."
exclude = ["/.github"]

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true

[profile.dev.package."*"]
opt-level = 2

[dependencies]
clap = { version = "4.4", features = ["derive"] }
flate2 = "1.0"
gltf = "1.4.0"
rayon = "1.8.0"
regex = "1.10.2"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0.78"
